<resources>
    <string name="app_name">Machine-Task-IndiaNic</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_splash">Splash</string>
    <string name="label_login">Login</string>
    <string name="label_otp_verification">Otp Verification</string>
    <string name="label_home">Home</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="verify">Verify</string>
    <string name="google_maps_key">AIzaSyDm8YE17Vf2iwzZHleR3-mq0ViSyokqidQ</string>
    <string name="choose">Choose</string>
    <string name="current_weather">Current Weather</string>
    <string name="days_forecast">5 Days Forecast</string>
    <string name="latitude">Latitude:- %1$s</string>
    <string name="longitude">Longitude:- %1$s</string>
    <string name="address">Address:- %1$s</string>
    <string name="min_temperature">Min Temperature:- %1$s</string>
    <string name="max_temperature">Max Temperature:- %1$s</string>
    <string name="humidity">Humidity:- %1$s</string>
    <string name="sea_level">Sea Level:- %1$s</string>
    <string name="pressure">Pressure:- %1$s</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_wait">"Please wait…"</string>
</resources>