<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.machine_task_indianic.ui.authentication.fragment.SplashFragment"
        android:label="@string/label_splash"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splashFragment_to_homeActivity"
            app:destination="@id/homeActivity"
            app:launchSingleTop="true" />

    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.machine_task_indianic.ui.authentication.fragment.LoginFragment"
        android:label="@string/label_login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_otpVerificationFragment"
            app:destination="@id/otpVerificationFragment" />

    </fragment>

    <fragment
        android:id="@+id/otpVerificationFragment"
        android:name="com.example.machine_task_indianic.ui.authentication.fragment.PhoneVerificationFragment"
        android:label="@string/label_otp_verification"
        tools:layout="@layout/fragment_phone_verification">

        <action
            android:id="@+id/action_splashFragment_to_homeActivity"
            app:destination="@id/homeActivity"
            app:launchSingleTop="true" />
        <argument
            android:name="mobile_number"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="default" />

    </fragment>

    <activity
        android:id="@+id/homeActivity"
        android:name="com.example.machine_task_indianic.ui.home.activity.HomeActivity"
        android:label="activity_home"
        tools:layout="@layout/activity_home" />

</navigation>