<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragment.CurrentWeatherFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <com.google.android.material.card.MaterialCardView
        style="@style/CardViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:layout_constraintEnd_toEndOf="@id/guideLineEnd"
        app:layout_constraintStart_toStartOf="@id/guideLineStart"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLatitude"
                style="@style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewLongitude"
                style="@style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/longitude" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAddress"
                style="@style/Widget.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/address" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>